# git-test-lfs

./: .gitignore  .lfsconfig  Makefile  TODO.md  batch-download-request.json  cloudformation.yaml  lambda_objects_batch_post.py  lock-delete-lock-request.bash  lock-list-locks-for-verification-request.bash  lock-list-locks-for-verification-request.json
glautils/: README.rst  pyproject.toml
glautils/src/config/: __init__.py
src/: lambda_objects_batch_post.py
tests/: batch-download-request.bash  batch-download-request.json  lock-create-lock-request.bash  lock-create-lock-request.json  lock-delete-lock-request.bash  lock-delete-lock-request.json  lock-list-locks-for-verification-request.bash  lock-list-locks-request.bash  test_batch_upload_test.py
