[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "glautils"
authors = [
    {name = "Patrick Walentiny", email = "patrick.walentiny@walentiny.com"}
]
description = "Git LFS API Utils"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "boto3"
]
dynamic = ["version"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
config = "config:main"